@@ -1,15 +1,15 @@
 package com.typerf1.typerf1.service;
 
 import com.typerf1.typerf1.dto.points.Record;
+import com.typerf1.typerf1.dto.worldRecord.WorldRecord;
 import com.typerf1.typerf1.repository.WorldRecordRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import java.util.HashMap;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 
 @Service
 public class WorldRecordService {
@@ -20,37 +20,37 @@ public class WorldRecordService {
         this.worldRecordRepository = worldRecordRepository;
     }
 
-    public Map<String, Record> getRecords() {
-        Map<String, Record> recordList = new HashMap<>();
+    public List<WorldRecord> getRecords() {
+        List<WorldRecord> recordList = new ArrayList<>();
 
         //without joker
-        putRecord(recordList, true, "Race", "highest-race");
-        putRecord(recordList, true, "Qualifying", "highest-qualifying");
-        putRecord(recordList, true, "Sprint", "highest-sprint");
-        putRecord(recordList, false, "Race", "lowest-race");
-        putRecord(recordList, false, "Qualifying", "lowest-qualifying");
-        putRecord(recordList, false, "Sprint", "lowest-sprint");
+        putRecord(recordList, true, "Race", "The highest number of points gained with prediction on Race");
+        putRecord(recordList, true, "Qualifying", "The highest number of points gained with prediction on Qualifying");
+        putRecord(recordList, true, "Sprint", "The highest number of points gained with prediction on Sprint");
+        putRecord(recordList, false, "Race", "The lowest number of points gained with prediction on Race");
+        putRecord(recordList, false, "Qualifying", "The lowest number of points gained with prediction on Qualifying");
+        putRecord(recordList, false, "Sprint", "The lowest number of points gained with prediction on Sprint");
 
         //with joker
-        putRecordJoker(recordList, true, "Race", "highest-race-joker");
-        putRecordJoker(recordList, true, "Qualifying", "highest-qualifying-joker");
-        putRecordJoker(recordList, false, "Race", "lowest-race-joker");
-        putRecordJoker(recordList, false, "Qualifying", "lowest-qualifying-joker");
+        putRecordJoker(recordList, true, "Race", "The highest number of points gained with prediction on Race");
+        putRecordJoker(recordList, true, "Qualifying", "The highest number of points gained with prediction on Qualifying");
+        putRecordJoker(recordList, false, "Race", "The lowest number of points gained with prediction on Race");
+        putRecordJoker(recordList, false, "Qualifying", "The lowest number of points gained with prediction on Qualifying");
 
         //weekend without joker
-        putRecordWeekend(recordList, true, "highest-weekend");
-        putRecordWeekend(recordList, false, "lowest-weekend");
+        putRecordWeekend(recordList, true, "The highest number of points gained in non-Sprint race weekend");
+        putRecordWeekend(recordList, false, "The lowest number of points gained in non-Sprint race weekend");
 
         //weekend with joker
-        putRecordSprintWeekendJoker(recordList, true, "highest-sprint-weekend-joker");
-        putRecordSprintWeekendJoker(recordList, false, "lowest-sprint-weekend-joker");
+        putRecordSprintWeekendJoker(recordList, true, "The highest number of points gained in Sprint race weekend");
+        putRecordSprintWeekendJoker(recordList, false, "The lowest number of points gained in Sprint race weekend");
 
         //sprint weekend without joker
 
         return recordList;
     }
 
-    void putRecord(Map<String, Record> recordList, boolean highest, String find, String key) {
+    void putRecord(List<WorldRecord> recordList, boolean highest, String find, String key) {
         Pageable pageable = PageRequest.of(0, 1);
         List<Record> toFind;
         if (highest) {
@@ -59,11 +59,14 @@ public class WorldRecordService {
             toFind = worldRecordRepository.findLowest(find, pageable);
         }
         if (!toFind.isEmpty()) {
-            recordList.put(key, toFind.get(0));
+            var worldRecord = new WorldRecord();
+            worldRecord.setName(key);
+            worldRecord.setRecord(toFind.getFirst());
+            recordList.add(worldRecord);
         }
     }
 
-    void putRecordJoker(Map<String, Record> recordList, boolean highest, String find, String key) {
+    void putRecordJoker(List<WorldRecord> recordList, boolean highest, String find, String key) {
         Pageable pageable = PageRequest.of(0, 1);
         List<Record> toFind;
         if (highest) {
@@ -72,11 +75,14 @@ public class WorldRecordService {
             toFind = worldRecordRepository.findLowestJoker(find, pageable);
         }
         if (!toFind.isEmpty()) {
-            recordList.put(key, toFind.get(0));
+            var worldRecord = new WorldRecord();
+            worldRecord.setName(key);
+            worldRecord.setRecord(toFind.getFirst());
+            recordList.add(worldRecord);
         }
     }
 
-    void putRecordWeekend(Map<String, Record> recordList, boolean highest, String key) {
+    void putRecordWeekend(List<WorldRecord> recordList, boolean highest, String key) {
         Pageable pageable = PageRequest.of(0, 1);
         List<Object[]> results;
 
@@ -92,12 +98,15 @@ public class WorldRecordService {
             String grandPrixName = (String) result[2];
             Integer year = (Integer) result[3];
             Integer pointsSum = ((Number) result[4]).intValue();
+            var worldRecord = new WorldRecord();
+            worldRecord.setName(key);
             Record record = new Record(name, surname, grandPrixName, year, pointsSum);
-            recordList.put(key, record);
+            worldRecord.setRecord(record);
+            recordList.add(worldRecord);
         }
     }
 
-    void putRecordSprintWeekendJoker(Map<String, Record> recordList, boolean highest, String key) {
+    void putRecordSprintWeekendJoker(List<WorldRecord> recordList, boolean highest, String key) {
         Pageable pageable = PageRequest.of(0, 1);
         List<Object[]> results;
 
@@ -113,8 +122,11 @@ public class WorldRecordService {
             String grandPrixName = (String) result[2];
             Integer year = (Integer) result[3];
             Integer pointsSum = ((Number) result[4]).intValue();
+            var worldRecord = new WorldRecord();
+            worldRecord.setName(key);
             Record record = new Record(name, surname, grandPrixName, year, pointsSum);
-            recordList.put(key, record);
+            worldRecord.setRecord(record);
+            recordList.add(worldRecord);
         }
     }
 }
